light refactoring of package and board to deduplicate code into common
